--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,88 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-card-content>
+      <ion-title class="bold">
+        Track
+      </ion-title>
+    </ion-card-content>
+    <ion-card class="headerCard">
+      <ion-card-header class="bold">
+         Insert line chart
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>01/01/2020</ion-item>
+        <ion-item>01/01/2020</ion-item>
+        <ion-item>01/01/2020</ion-item>
+
+      </ion-card-content>
+    </ion-card>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-list>
+    <ion-list-header>
+      <ion-label color="dark" class="bold">Projects</ion-label>
+    </ion-list-header>
+    <ion-grid no-padding>
+      <ion-row nowrap class="categoryContainer">
+        <ion-col no-padding class="categoryContainerStart">
+          <ion-card>
+            <ion-card-header class="bold">
+              Clothes
+            </ion-card-header>
+            <ion-card-content>
+
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+
+        <ion-col no-padding>
+          <ion-card>
+            <ion-card-header class="bold">
+              Board Games
+            </ion-card-header>
+            <ion-card-content>
+              01/01/2020
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+
+        <ion-col no-padding>
+          <ion-card>
+            <ion-card-header class="bold">
+              Add New
+            </ion-card-header>
+            <ion-card-content>
+
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-list no-padding>
+          <ion-list-header>
+            <ion-label color="dark" class="bold">Popular Items</ion-label>
+          </ion-list-header>
+          <ion-item>
+            <ion-avatar slot="start">
+              <img src="./avatar-finn.png">
+            </ion-avatar>
+            <ion-label>
+              <h2>Finn</h2>
+              <h3>I'm a big deal</h3>
+              <p>Listen, I've had a pretty messed up day...</p>
+            </ion-label>
+          </ion-item>
+          
+          
+          <!-- <ion-item>
+            <ion-label>Puerto Rico</ion-label>
+            <ion-note slot="end" color="tertiary">Board Games</ion-note> -->
+
+          <!-- </ion-item> -->
+        </ion-list>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
 </ion-content>
