--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -4,9 +4,9 @@
     <ion-buttons slot="start" (click)="returnHome()">
       <ion-icon class="mediumIcon ion-float-left" name="arrow-round-back"></ion-icon>
       </ion-buttons>
-    <ion-card-content>
+    <ion-card-content class="ion-no-padding">
       
-      <ion-title class="bold twentyPt">
+      <ion-title class="projectTitle bold twentyPt">
         {{ project?.title }}
       </ion-title>
     </ion-card-content>
@@ -14,6 +14,22 @@
 </ion-header>
 
 <ion-content>
+    <!-- FAB -->
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button color="tertiary">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+  
+      <ion-fab-list side="top">
+        <ion-fab-button color="tertiary" data-desc="Project">
+          <ion-icon name="construct"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button color="tertiary" data-desc="Item">
+          <ion-icon name="pricetag"></ion-icon>
+        </ion-fab-button>
+      </ion-fab-list>
+    </ion-fab>
+    
   <ion-list>
     <ion-list-header>
       <ion-label color="dark" class="bold fifteenPt">Items</ion-label>
