--- a/src/global.scss
+++ b/src/global.scss
@@ -100,7 +100,9 @@ ion-list {
 .homeTitle {
     background-color: var(--ion-color-base);
     z-index: 100;
-
+}
+.projectTitle {
+    padding: 15px 0px;
 }
 .whiteFont {
     color:#fff !important;
@@ -136,6 +138,9 @@ ion-list {
     overflow-y: hidden;
     word-wrap: break-word;
     padding-left: 14px ;
+}
+.colorCard {
+    min-width: 169px;
 }
 
 .iconContainer {
