--- a/src/app/new-item/new-item.page.html
+++ b/src/app/new-item/new-item.page.html
@@ -17,17 +17,8 @@
   <!-- FAB -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="tertiary">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="save"></ion-icon>
     </ion-fab-button>
-
-    <ion-fab-list side="top">
-      <ion-fab-button color="tertiary" data-desc="Project">
-        <ion-icon name="construct"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button color="tertiary" data-desc="Item">
-        <ion-icon name="pricetag"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
   </ion-fab>
 
   <ion-list>
@@ -46,8 +37,10 @@
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Something Else</ion-label>
-      <ion-input></ion-input>
+      <ion-label position="floating">Add Image</ion-label>
+      <ion-input type="file" accept="image/*"></ion-input>
+
+      <!-- <ion-input></ion-input> -->
     </ion-item>
 
 
