--- a/src/global.scss
+++ b/src/global.scss
@@ -153,10 +153,14 @@ ion-list {
     padding-left:15px;
 }
 .largeIcon {
-    font-size: 50px;
+    font-size: 50px; 
     padding: 15px 0px;
   }
-
+.projectCount {
+    padding: 0 20px; 
+    text-align:right;
+    font-size:25pt;
+}
 ion-fab-button[data-desc] {
     position: relative;
   }
@@ -173,3 +177,7 @@ ion-fab-button[data-desc] {
     // color: white;
     box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.14), 0 1px 18px 0 rgba(0,0,0,0.12);
   }
+  ion-avatar {
+    text-align: center;
+    font-size: 15pt;
+}
