--- a/src/app/new-item/new-item.page.html
+++ b/src/app/new-item/new-item.page.html
@@ -27,18 +27,25 @@
     </ion-list-header>
 
     <ion-item>
-      <ion-label position="floating">Name</ion-label>
-      <ion-input></ion-input>
+      <ion-label position="floating">Title</ion-label>
+      <ion-input [(ngModel)]="titleInput"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Project</ion-label>
+      <ion-select [(ngModel)]="projectInput" placeholder="Select One">
+        <ion-select-option *ngFor="let project of projectsService.projects" value="{{project.id}}">{{project.title}}</ion-select-option>
+      </ion-select>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Description</ion-label>
-      <ion-input></ion-input>
+      <ion-textarea [(ngModel)]="descriptionInput" ></ion-textarea>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Add Image</ion-label>
-      <ion-input type="file" accept="image/*"></ion-input>
+      <ion-label position="stacked">Add Image</ion-label>
+      <ion-input [(ngModel)]="imageInput" type="file" accept="image/*"></ion-input>
 
       <!-- <ion-input></ion-input> -->
     </ion-item>
