--- a/src/app/new-project/new-project.page.html
+++ b/src/app/new-project/new-project.page.html
@@ -17,7 +17,7 @@
   <!-- FAB -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="tertiary">
-      <ion-icon name="save"></ion-icon>
+      <ion-icon name="save" (click)="postProject()"></ion-icon>
     </ion-fab-button>
 
     <ion-fab-list side="top">
@@ -42,7 +42,7 @@
 
     <ion-item>
       <ion-label position="floating">Description</ion-label>
-      <ion-input></ion-input>
+      <ion-textarea></ion-textarea>
     </ion-item>
 
   </ion-list>
