--- a/src/app/new-item/new-item.page.html
+++ b/src/app/new-item/new-item.page.html
@@ -17,7 +17,7 @@
   <!-- FAB -->
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="tertiary">
-      <ion-icon name="save"></ion-icon>
+      <ion-icon (click)="postItem()" name="save"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
@@ -42,13 +42,13 @@
       <ion-label position="floating">Description</ion-label>
       <ion-textarea [(ngModel)]="descriptionInput" ></ion-textarea>
     </ion-item>
-
+<!-- 
     <ion-item>
       <ion-label position="stacked">Add Image</ion-label>
       <ion-input [(ngModel)]="imageInput" type="file" accept="image/*"></ion-input>
 
-      <!-- <ion-input></ion-input> -->
-    </ion-item>
+      <ion-input></ion-input>
+    </ion-item> -->
 
 
 
